--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.2.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
